feat: Update project name and metadata
Reflects the expanded scope of the project to include "Agentic AI" alongside "Parallel Consciousness".
Updates the project name in package.json, index.html, and metadata.json.
Adds microphone permission to metadata.json for future audio capabilities.
Introduces Attachment and ContextNode types for richer data handling in messages.
Updates Gemini service to use a newer model and include image generation capabilities.
Enhances TypewriterText component with onStart callback.
Refactors Onboarding component to support manual input and search modes, and adds avatar generation placeholder.

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "duet:-parallel-consciousness",
+  "name": "duet:-agentic-ai-&-parallel-consciousness",
   "private": true,
   "version": "0.0.0",
   "type": "module",
